ref bar alignment fix

--- a/app/src/components/BarTimeline/style.scss
+++ b/app/src/components/BarTimeline/style.scss
@@ -122,6 +122,10 @@
         opacity: 1;
       }
 
+      &.center.post{
+        margin-left: calc(#{$thickBorderWidth}/2);
+      }
+
       &.gradient {
         &.post{
           background-color:$colorYellow;
